Fix spacing between link icons

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -118,14 +118,14 @@ img {
 }
 
 .link-holder {
-    margin-left: 35%;
-    margin-right:35%;
+    margin-left: 20%;
+    margin-right:20%;
 }
 
 .copyright {
     font-size: 10px;
     margin-left: 38%;
-    margin-right: 40%;
+    margin-right: 38%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
